[package]
name = "frenv"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = ""
homepage = "https://github.com/jakoritarleite/frenv"
repository = "https://github.com/jakoritarleite/frenv"
readme = "README.md"
keywords = ["env", "environment", "load"]

[dependencies]
frenv_macro = { path = "macro", version = "0.1.0" }
thiserror = "2.0.8"
