[package]
name = "frenv"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A generic config loader from environment variables"
homepage = "https://github.com/jakoritarleite/frenv"
repository = "https://github.com/jakoritarleite/frenv"
readme = "README.md"
keywords = ["env", "environment", "load"]

[dependencies]
frenv_macro = { path = "macro", version = "0.1.1" }
thiserror = "2.0.8"
