[package]
name = "frenv_macro"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Macros 0.1 implementation of #[derive(FromEnv)]"
homepage = "https://github.com/jakoritarleite/frenv"
repository = "https://github.com/jakoritarleite/frenv"
readme = "README.md"
keywords = ["env", "environment", "load", "derive", "macro"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = "2.0.90"
syn-path = "2.0.0"
